# Cpp_skeleton

./: CMakeLists.txt  README.md
cmake/: c_compiler_flags.cmake  cpp_compiler_flags.cmake  directories.cmake
src/aux/: CMakeLists.txt
src/aux/src/: catch.cpp
src/skeleton/: CMakeLists.txt
src/skeleton/include/skeleton/: foo.hpp
src/skeleton/src/: foo.cpp  main.cpp
src/skeleton/tests/: skeleton_tests.cpp
